Finish tow modules---the user and librarian login part, and library initialisation part.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(new C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(new main.c book_management.c book_management.h page.c page.h)
+add_executable(new main.c book_management.c book_management.h page.c page.h user.c user.h librarian.c librarian.h login.c login.h)
